[gd_scene load_steps=4 format=3 uid="uid://drw5tyd2e0me4"]

[ext_resource type="Script" path="res://scenes/outliner/outliner.gd" id="1_lmulx"]
[ext_resource type="Script" path="res://scenes/outliner/search_settings.gd" id="2_km3as"]
[ext_resource type="Script" path="res://scenes/outliner/data_filter.gd" id="2_s4bv8"]

[node name="Outliner" type="VBoxContainer" node_paths=PackedStringArray("tree", "searchbar", "history_prev_button", "history_next_button", "search_settings", "data_filter")]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_lmulx")
tree = NodePath("Tree")
searchbar = NodePath("HBoxContainer/SearchBar")
history_prev_button = NodePath("HBoxContainer/HistoryPrev")
history_next_button = NodePath("HBoxContainer/HistoryNext")
search_settings = NodePath("HBoxContainer/SearchSettings")
data_filter = NodePath("HBoxContainer/DataFilter")
metadata/_editor_only_ = false

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
metadata/_editor_only_ = false

[node name="HistoryPrev" type="Button" parent="HBoxContainer"]
layout_mode = 2
tooltip_text = "Previous item in history"
disabled = true
text = "<"
metadata/_editor_only_ = false

[node name="HistoryNext" type="Button" parent="HBoxContainer"]
layout_mode = 2
tooltip_text = "Next item in history"
disabled = true
text = ">"
metadata/_editor_only_ = false

[node name="SearchBar" type="LineEdit" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Search"
metadata/_editor_only_ = false

[node name="JumpToSelected" type="Button" parent="HBoxContainer"]
layout_mode = 2
tooltip_text = "Jump to selected item"
text = "="
metadata/_editor_only_ = false

[node name="SearchSettings" type="MenuButton" parent="HBoxContainer"]
layout_mode = 2
tooltip_text = "Search settings"
text = "Mode"
flat = false
script = ExtResource("2_km3as")
metadata/_editor_only_ = false

[node name="DataFilter" type="MenuButton" parent="HBoxContainer"]
layout_mode = 2
tooltip_text = "Data types to search"
text = "Data"
flat = false
script = ExtResource("2_s4bv8")
metadata/_editor_only_ = false

[node name="Tree" type="Tree" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
hide_root = true
metadata/_editor_only_ = false

[connection signal="pressed" from="HBoxContainer/HistoryPrev" to="." method="history_prev"]
[connection signal="pressed" from="HBoxContainer/HistoryNext" to="." method="history_next"]
[connection signal="text_changed" from="HBoxContainer/SearchBar" to="." method="_on_search_bar_text_changed"]
[connection signal="pressed" from="HBoxContainer/JumpToSelected" to="." method="_on_jump_to_selected_pressed"]
[connection signal="settings_changed" from="HBoxContainer/SearchSettings" to="." method="_on_search_settings_changed"]
[connection signal="settings_changed" from="HBoxContainer/DataFilter" to="." method="_on_data_filter_settings_changed"]
[connection signal="item_selected" from="Tree" to="." method="_on_tree_item_selected"]
